--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
                 </ul></ol>
             </td>
         </tr>
+        <tr>
+            <td>Faculty of Science</td>
+            <td><ol>
+                <li>Information Technology</li>
+                <li>Computer Science</li>
+            </ol></td>
+            <td><ol><li> First Round</li>
+                <ul><li> 1st December 2022</li>
+                </ul>
+                <li>Second Round</li>
+                <ul><li> 3rd March 2023</li>
+                </ul></ol>
+            </td>
+        </tr>
     </table>
     
 </body>
