This is the 3rd commit.

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>King Mongkut's university of technology thonburi</h1>
     <a href="https://www.kmutt.ac.th" ><img width="200px"  src="images/KMUTT_CI_Semi_Logo-normal-full-1061x1200.png" ></a>
-    <table border="1px" >
+    <table id="table" border="1px">
         <tr>
             <th>Department</th>
             <th>Major</th>
             <th>Admission Date</th>
         </tr>
         <tr>
-            <td>School of Information Technology</td>
+            <td style="margin: 10px; padding: 20px;">School of Information Technology</td>
             <td><ol>
                 <li>Information Technology</li>
                 <li>Computer Science</li>
@@ -42,6 +43,7 @@
                 </ul></ol>
             </td>
         </tr>
+
     </table>
     
 </body>
